<resources>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="not_registered">Not Registered? Sign up here.</string>
    <string name="sign_up">Sign Up</string>
    <string name="rlp">Remote Learning Plus</string>
    <string name="student">Student</string>
    <string name="instructor">Instructor</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="institution">Institution</string>
    <string name="add_course">Add Course</string>
    <string name="section">Section</string>
    <string name="subject">Subject</string>
    <string name="level">Level</string>
    <string name="app_name">Remote_Learning_Plus</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!--String values for course information activity -->
    <string name="course_information">Enter Course Information</string>
    <string name="edit_course_name">Enter a course name</string>
    <string name="edit_course_id">Enter a course ID</string>
    <string name="edit_section">Enter a course section</string>
    <string name="edit_course_description">Enter a course description</string>
    <string name="next_page">Continue</string>

    <!--String values for course meeting schedule activity -->
    <string name="meeting_days">Enter section and choose days to meet.</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thur</string>
    <string name="friday">Fri</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>


    <!--String values for home pages -->
    <string name="hi">Hi, Name</string>
    <string name="classes">Classes for Semester</string>
    <string name="courses">Active Courses +</string>

    <!--String values for join course -->
    <string name="join">Join a course</string>
    <string name="edit_invite_code">Enter invite code</string>
    <string name="submit">Submit</string>
    <string name="create_course">Create Course</string>
    <string name="ask_question">Ask Question</string>
    <string name="question">Question</string>
    <string name="course_name">Course Name</string>
    <string name="quizzes">Quizzes</string>
    <string name="resources">Resources</string>
    <string name="class_list">Class List</string>
    <string name="information">Information</string>
    <string name="statistics">Statistics</string>
    <string name="add_student">Add Student</string>
    <string name="results">Results</string>
    <string name="course">Course</string>

    <string name="join_a_course">Join a course +</string>
    <string name="enter_course_invite_code">Enter course invite Code.</string>
    <string name="invite_code">Invite Code</string>
    <string name="inivte_code">Inivte Code</string>
    <string name="hide_name">Hide Name</string>
    <string name="questions">Questions</string>
    <string name="answered">Answered</string>
    <string name="back">Back</string>
    <string name="course_id">Course: </string>
    <string name="course_desc">Description</string>
    <string name="days">Days</string>
    <string name="schedule">Schedule</string>
    <string name="times">Times</string>

    <!--String values for join course -->

    <string name="exit">Exit</string>
    <string name="description">desc</string>
    <string name="final_score">Final Score</string>
    <string name="returnhome">Return</string>
    <string name="flashcards">Flashcards</string>
    <string name="score">Score</string>
    <string name="quiz">Quiz</string>


    <string name="questionNum">Question #</string>
    <string name="choices">Choices</string>
    <string name="new_question">New Question</string>
    <string name="finish_quiz">Finish Quiz</string>
    <string name="choice_1">Choice 1</string>
    <string name="choice_2">Choice 2</string>
    <string name="choice_3">Choice 3</string>
    <string name="choice_4">Choice 4</string>
    <string name="time_limit">Time Limit</string>
    <string name="point_s">Point/s</string>
    <string name="_10">10</string>
    <string name="multiple_choice_1">Multiple Choice 1</string>
    <string name="seconds">seconds</string>
    <string name="_12">12</string>
    <string name="next_question">Next Question</string>
    <string name="save_quiz">Save Quiz</string>
    <string name="topic">Topic</string>
    <string name="add_questions">Add Questions</string>
    <string name="enter_quiz_title">Enter quiz title</string>
    <string name="edit_quiz_title">Edit quiz title</string>
    <string name="edit_questions">Edit Questions</string>
    <string name="_1">1</string>
    <string name="enter_question">Enter question here.</string>
    <string name="invite_code_label">\Invite Code: </string>
    <string name="add_resource">Add Resource</string>
    <string name="resource_url">Resource URL</string>
    <string name="title">Title</string>
    <string name="resource">Resource</string>
</resources>