<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_background"
    tools:context=".CreateQuestion">

    <ImageView
        android:id="@+id/imgResults"
        android:layout_width="350dp"
        android:layout_height="600dp"
        android:layout_marginTop="64dp"
        android:background="@color/white"
        android:contentDescription="@string/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ImageView>

    <EditText
        android:id="@+id/etQuestion"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:gravity="start|top"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/qLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:labelFor="@id/etQuestion"
        android:text="@string/questionNum"
        app:layout_constraintBottom_toTopOf="@+id/etQuestion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="39dp"
        android:layout_height="228dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="270dp"
        android:padding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etQuestion">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="9dp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="9dp" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="9dp" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
    </RadioGroup>

    <Button
        android:id="@+id/nextQuestionButton"
        android:layout_width="150dp"
        android:layout_height="53dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="31dp"
        android:backgroundTint="@color/blue_background"
        android:text="@string/next_question"
        app:layout_constraintStart_toStartOf="@+id/imgResults"
        app:layout_constraintTop_toBottomOf="@+id/tvTime" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="150dp"
        android:layout_height="53dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        android:backgroundTint="@color/blue_background"
        android:text="@string/save_quiz"
        app:layout_constraintEnd_toEndOf="@+id/imgResults"
        app:layout_constraintTop_toBottomOf="@+id/etTime" />

    <EditText
        android:id="@+id/etChoice1"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_marginBottom="9dp"
        android:autofillHints=""
        android:background="@color/light_grey"
        android:ems="10"
        android:inputType="textShortMessage|textLongMessage"
        android:labelFor="@id/radioGroup"
        android:text="@string/choice_1"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toTopOf="@+id/radioGroup"
        tools:ignore="labelFor" />

    <EditText
        android:id="@+id/etChoice2"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_marginTop="9dp"
        android:autofillHints=""
        android:background="@color/light_grey"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/choice_2"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/etChoice1"
        tools:ignore="labelFor" />

    <EditText
        android:id="@+id/etChoice3"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_marginTop="9dp"
        android:autofillHints=""
        android:background="@color/light_grey"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/choice_3"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/etChoice2"
        tools:ignore="labelFor" />

    <EditText
        android:id="@+id/etChoice4"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_marginTop="9dp"
        android:autofillHints=""
        android:background="@color/light_grey"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/choice_4"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/etChoice3"
        tools:ignore="labelFor" />

    <TextView
        android:id="@+id/tvQNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/seconds"
        android:text="@string/_12"
        app:layout_constraintBottom_toBottomOf="@+id/qLabel"
        app:layout_constraintStart_toEndOf="@+id/qLabel"
        app:layout_constraintTop_toTopOf="@+id/qLabel" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:text="@string/time_limit"
        app:layout_constraintEnd_toStartOf="@+id/etTime"
        app:layout_constraintHorizontal_bias="0.967"
        app:layout_constraintStart_toStartOf="@+id/imgResults"
        app:layout_constraintTop_toBottomOf="@+id/tvPoints" />

    <EditText
        android:id="@+id/etTime"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number|text"
        android:text="@string/_10"
        android:textAlignment="center"
        android:textSize="10sp"
        app:layout_constraintEnd_toStartOf="@+id/tvTime2"
        app:layout_constraintTop_toBottomOf="@+id/etPoints"
        tools:ignore="SmallSp, LabelFor" />

    <TextView
        android:id="@+id/tvTime2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:text="@string/seconds"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/imgResults"
        app:layout_constraintTop_toBottomOf="@+id/etPoints"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/tvPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="64dp"
        android:text="@string/point_s"
        app:layout_constraintEnd_toStartOf="@+id/etPoints"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/imgResults"
        app:layout_constraintTop_toBottomOf="@+id/etChoice4" />

    <EditText
        android:id="@+id/etPoints"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="64dp"
        android:autofillHints=""
        android:ems="10"
        android:hint=""
        android:inputType="numberDecimal"
        android:text="@string/_1"
        android:textAlignment="center"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/imgResults"
        app:layout_constraintTop_toBottomOf="@+id/etChoice4"
        tools:ignore="LabelFor,SmallSp"
        tools:labelFor="@id/tvPoints" />

</androidx.constraintlayout.widget.ConstraintLayout>