<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateQuestion">

    <EditText
        android:id="@+id/etQuestion"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:gravity="start|top"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/enter_question"/>

    <TextView
        android:id="@+id/qLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/questionNum"
        app:layout_constraintBottom_toTopOf="@+id/etQuestion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:labelFor= "@id/etQuestion"
        />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="37dp"
        android:layout_height="203dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="270dp"
        android:layout_marginBottom="32dp"
        android:padding="0dp"
        app:layout_constraintBottom_toTopOf="@+id/etPoints"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etQuestion">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
    </RadioGroup>

    <Button
        android:id="@+id/nextQuestionButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:text="@string/new_question"
        app:layout_constraintBottom_toTopOf="@+id/saveButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="60dp"
        android:text="@string/finish_quiz"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etChoice1"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textShortMessage|textLongMessage"
        android:labelFor="@id/radioGroup"
        android:hint="@string/choice_1"
        tools:ignore="labelFor"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toTopOf="@+id/radioGroup" />

    <EditText
        android:id="@+id/etChoice2"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/choice_2"
        tools:ignore="labelFor"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/etChoice1"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etChoice3"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/choice_3"
        tools:ignore="labelFor"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/etChoice2"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etChoice4"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/choice_4"
        tools:ignore="labelFor"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/etChoice3"
        android:autofillHints="" />

    <TextView
        android:id="@+id/tvQNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        android:hint="@string/seconds"
        app:layout_constraintBottom_toBottomOf="@+id/qLabel"
        app:layout_constraintStart_toEndOf="@+id/qLabel"
        app:layout_constraintTop_toTopOf="@+id/qLabel" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_limit"
        app:layout_constraintBottom_toBottomOf="@+id/etTime"
        app:layout_constraintStart_toStartOf="@+id/saveButton"
        app:layout_constraintTop_toBottomOf="@+id/etPoints" />

    <TextView
        android:id="@+id/tvTime2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:text="@string/seconds"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/etTime"
        app:layout_constraintEnd_toEndOf="@+id/etChoice3"
        app:layout_constraintStart_toStartOf="@+id/saveButton"
        app:layout_constraintTop_toBottomOf="@+id/etPoints"
        app:layout_constraintVertical_bias="0.615"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/tvPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/point_s"
        app:layout_constraintBottom_toBottomOf="@+id/etPoints"
        app:layout_constraintStart_toStartOf="@+id/nextQuestionButton"
        app:layout_constraintTop_toTopOf="@+id/etPoints" />

    <EditText
        android:id="@+id/etPoints"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/_1"
        android:textAlignment="center"
        android:textSize="10sp"
        android:hint=""
        app:layout_constraintBottom_toTopOf="@+id/nextQuestionButton"
        app:layout_constraintEnd_toEndOf="@+id/etChoice3"
        tools:ignore="LabelFor,SmallSp"
        tools:labelFor="@id/tvPoints" />

    <EditText
        android:id="@+id/etTime"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number|text"
        android:text="@string/_10"
        android:textAlignment="center"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/nextQuestionButton"
        app:layout_constraintStart_toStartOf="@+id/etPoints"
        app:layout_constraintTop_toBottomOf="@+id/etPoints"
        tools:ignore="SmallSp, LabelFor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:menu="@layout/menu_main" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>